--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<blockquote class="questions">
+		<p class="q1">i.Who was the first female to become the governor of an Indian state?</p>
+		</blockquote>
+	<blockquote class="questions">
+		<p class="q1">ii.Who among first Woman to climb Mount Everest twice?</p>
+	</blockquote>
+	<blockquote class="questions">
+		<p class="q1">iii.Who is President of India?</p>
+	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
