--- a/main.html
+++ b/main.html
@@ -9,13 +9,13 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<blockquote class="questions">
-		<p class="q1">i.Who was the first female to become the governor of an Indian state?</p>
+		<p class="q1">1.Who was the first female to become the governor of an Indian state?</p>
 		</blockquote>
 	<blockquote class="questions">
-		<p class="q1">ii.Who among first Woman to climb Mount Everest twice?</p>
+		<p class="q1">2.Who among first Woman to climb Mount Everest twice?</p>
 	</blockquote>
 	<blockquote class="questions">
-		<p class="q1">iii.Who is President of India?</p>
+		<p class="q1">3.Who is President of India?</p>
 	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
